@@ -134,7 +134,7 @@ str.default <-
 	    ss <- strwrap(ss, width = width, exdent = nind)
 					# wraps at white space (only)
 	}
-	if(any(iLong <- nchar(ss) > width)) { ## cut hard
+	if(length(iLong <- which(nchar(ss) > width))) { ## cut hard
 	    sL <- ss[iLong]
 	    k <- as.integer(width-2)
 	    if(any(i <- grepl("\"", substr(sL, k +1L, nchar(sL))))) {
